2014-03-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-node-optional): New function.
	(soap-node-multiple): Likewise.
	(soap-xs-parse-element): Call soap-node-optional and
	soap-node-multiple.
	(soap-xs-complex-type): Add optional? and multiple? slots.
	(soap-xml-get-children-fq): New function.
	(soap-xs-element-get-fq-name): Likewise.
	(soap-xs-complex-type-optional-p): Likewise.
	(soap-xs-complex-type-multiple-p): Likewise.
	(soap-xs-attributes-consolidate): Likewise.
	(soap-decode-xs-attributes): Likewise.
	(soap-decode-xs-complex-type): Decode types with nil type
	indicator.  Support children that use local namespaces.  Decode
	attributes.  Add type considerations to optional? and multiple?
	warnings.

2014-02-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-parse-extension-or-restriction): Store
	parsed attributes.
	(soap-encode-xs-complex-type-attributes): Encode custom
	attributes.

2014-02-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type-attributes): don't
	add the xsi:type attribute (Exchange refuses requests which have
	this attribute)

2013-12-27  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el, soap-inspect.el: converted to lexical binding,
	corrected compiler warnings about unused function arguments and
	local variables.

2013-12-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Handle nil type
	indicator.
	(soap-parse-envelope): Handle response headers.
	(soap-parse-response): Likewise.  Only return non-nil decoded
	values.

2013-12-12  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-validate-xs-simple-type): Return validated
	value.

2013-12-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-xs-parse-element)
	(soap-xs-parse-simple-type) 
	(soap-xs-parse-complex-type)
	(soap-parse-message)
	(soap-parse-operation): add the current namespace to the element